# issue-triage-eval

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
results/: comparison.md  repo_stats.json  scores.json
scripts/: serve.py
src/triage_eval/: __init__.py  env.py  fetch.py  providers.py  roi.py  run.py  score.py  taxonomy.py  triage.py
web/: index.html
