[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "triage-eval"
version = "0.1.0"
description = "Evaluate LLM GitHub issue triage against maintainer ground truth"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "scikit-learn>=1.2",
    "numpy>=1.23",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.30"]
plot = ["matplotlib>=3.6"]

[tool.setuptools.packages.find]
where = ["src"]
